--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ commands =
 changedir = doc
 deps = sphinx
 commands=
+    mkdir -p {toxinidir}/doc/_static
     sphinx-build -W -D html_theme=alabaster -b html -d {envtmpdir}/doctrees .  {toxinidir}/doc/_build/html
 
 [testenv:pylint]
