Fix Pylint warnings

--- a/tox.ini
+++ b/tox.ini
@@ -45,6 +45,8 @@ commands =
 [testenv:docs]
 changedir = doc
 deps = sphinx
+whitelist_externals =
+    mkdir
 commands=
     mkdir -p {toxinidir}/doc/_static
     sphinx-build -W -D html_theme=alabaster -b html -d {envtmpdir}/doctrees .  {toxinidir}/doc/_build/html
