--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = django1.6,django1.7,django1.8,docs,pylint
+envlist = django{16,17,18},docs,pylint
 
 [base]
 deps =
@@ -11,23 +11,24 @@ deps =
 
 [testenv]
 usedevelop = True
-basepython = /usr/bin/python2.7
+basepython = python2.7
 commands =
-    python2 {toxinidir}/../hyperkitty_standalone/manage.py test {posargs:hyperkitty}
+    django-admin.py test --settings=hyperkitty.tests.settings_test {posargs:hyperkitty}
 
 
-[testenv:django1.6]
+[testenv:django16]
 deps =
     {[base]deps}
     Django>=1.6, <1.7
+    # djangorestframework dropped django1.6 in version 3.3
     djangorestframework<3.3
 
-[testenv:django1.7]
+[testenv:django17]
 deps =
     {[base]deps}
     Django>=1.7, <1.8a1
 
-[testenv:django1.8]
+[testenv:django18]
 deps =
     {[base]deps}
     Django>=1.8, <1.9a1
@@ -40,7 +41,7 @@ deps =
     coverage
 usedevelop = True
 commands =
-    coverage run --rcfile coveragerc {toxinidir}/../hyperkitty_standalone/manage.py test {posargs:hyperkitty}
+    coverage run --rcfile coveragerc django-admin.py test --settings=hyperkitty.tests.settings_test {posargs:hyperkitty}
     coverage html --rcfile coveragerc
 
 [testenv:docs]
