--- a/tox.ini
+++ b/tox.ini
@@ -59,4 +59,4 @@ deps =
     pylint
 usedevelop = True
 commands =
-    pylint --report n --rcfile pylintrc --disable I,R,C hyperkitty
+    pylint --reports n --rcfile pylintrc --disable I,R,C hyperkitty
