Prepare compatibility with Django 1.9
Haystack is not compatible yet:
https://github.com/django-haystack/django-haystack/pull/1277

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,13 @@ django18:
   - sqlite
   - gcc
 
+#django19:
+#  script:
+#  - tox -e django19
+#  tags:
+#  - sqlite
+#  - gcc
+
 pylint:
   script:
   - tox -e pylint
