--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,11 @@ deps =
     {[base]deps}
     Django>=1.8, <1.9a1
 
+[testenv:django19]
+deps =
+    {[base]deps}
+    Django>=1.9, <1.10a1
+
 
 [testenv:coverage]
 deps =
