Raise Django version dependency to 1.8

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = django{16,17,18},docs,pylint
+envlist = django18,docs,pylint
 
 [base]
 deps =
@@ -16,18 +16,6 @@ commands =
     django-admin.py test --settings=hyperkitty.tests.settings_test {posargs:hyperkitty}
 
 
-[testenv:django16]
-deps =
-    {[base]deps}
-    Django>=1.6, <1.7
-    # djangorestframework dropped django1.6 in version 3.3
-    djangorestframework<3.3
-
-[testenv:django17]
-deps =
-    {[base]deps}
-    Django>=1.7, <1.8a1
-
 [testenv:django18]
 deps =
     {[base]deps}
@@ -42,7 +30,7 @@ deps =
 [testenv:coverage]
 deps =
     {[base]deps}
-    Django>=1.7, <1.8a1
+    Django>=1.8, <1.9a1
     coverage
 usedevelop = True
 commands =
