Import the hyperkitty_standalone repo

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,4 +5,11 @@ recursive-include hyperkitty *.py *.html *.js *.txt
 graft hyperkitty/static
 graft hyperkitty/fixtures
 graft hyperkitty/tests/testdata
+prune hyperkitty/static/hyperkitty/.sass-cache
 include doc/conf.py doc/Makefile doc/*.rst
+# example project
+exclude example_project/settings_local.py
+exclude example_project/hyperkitty.db
+prune example_project/static
+prune example_project/fulltext_index
+prune example_project/logs
