--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = django18,docs,pylint
+envlist = django{18,19,110},docs,pylint
 
 [base]
 deps =
@@ -25,6 +25,11 @@ deps =
 deps =
     {[base]deps}
     Django>=1.9, <1.10a1
+
+[testenv:django110]
+deps =
+    {[base]deps}
+    Django>=1.10, <1.11a1
 
 
 [testenv:coverage]
