Remove useless config option in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -57,4 +57,4 @@ deps =
     pylint
 usedevelop = True
 commands =
-    pylint --reports n --rcfile pylintrc --disable I,R,C hyperkitty
+    pylint --reports n --disable I,R,C hyperkitty
