--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,7 +11,8 @@ include doc/conf.py doc/Makefile doc/*.rst
 recursive-include example_project *.py *.conf *.rst crontab
 exclude example_project/settings_local.py
 exclude example_project/hyperkitty.db
+include example_project/logs/.keep
+exclude example_project/logs/*.log
 prune example_project/static
 prune example_project/fulltext_index
-prune example_project/logs
 prune example_project/emails
