Also examine the example config files with flake8

--- a/tox.ini
+++ b/tox.ini
@@ -56,9 +56,9 @@ deps =
     {[base]deps}
     flake8 > 3.0
 commands =
-    python -m flake8 {posargs:hyperkitty}
+    python -m flake8 {posargs}
 
 
 [flake8]
 show-source = True
-exclude = .git,.tox,dist,*egg,example_project
+exclude = .git,.tox,dist,*egg,doc
