Migrate more libs

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = django{18,19,110},docs,lint
+envlist = django{18,19,110}{,-dev},docs,lint
 
 [base]
 deps =
@@ -12,24 +12,16 @@ deps =
 [testenv]
 usedevelop = True
 basepython = python2.7
+deps =
+    {[base]deps}
+    dev: -e../django-mailman3
+    django18:  Django>=1.8,  <1.9a1
+    django19:  Django>=1.9,  <1.10a1
+    django110: Django>=1.10, <1.11a1
 commands =
     django-admin.py test --settings=hyperkitty.tests.settings_test {posargs:hyperkitty}
 
-
-[testenv:django18]
-deps =
-    {[base]deps}
-    Django>=1.8, <1.9a1
-
-[testenv:django19]
-deps =
-    {[base]deps}
-    Django>=1.9, <1.10a1
-
-[testenv:django110]
-deps =
-    {[base]deps}
-    Django>=1.10, <1.11a1
+#    dev: ../django-mailman3
 
 
 [testenv:coverage]
@@ -37,7 +29,6 @@ deps =
     {[base]deps}
     Django>=1.8, <1.9a1
     coverage
-usedevelop = True
 commands =
     coverage run --rcfile coveragerc django-admin.py test --settings=hyperkitty.tests.settings_test {posargs:hyperkitty}
     coverage html --rcfile coveragerc
