--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-django{18,19,110},docs,lint
+envlist = py27-django{18,19,110,111},docs,lint
 
 
 [testenv]
@@ -18,6 +18,7 @@ deps =
     django18:  Django>=1.8,<1.9
     django19:  Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
+    django111: Django>=1.11,<1.12
 commands =
     coverage run example_project/manage.py test --settings=hyperkitty.tests.settings_test {posargs:hyperkitty}
     coverage: coverage html
