--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,11 @@ django-1.10:
   script:
   - tox -e py27-django110-head
 
+django-1.11:
+  stage: test
+  script:
+  - tox -e py27-django111-head
+
 lint:
   stage: quality-assurance
   script:
@@ -32,4 +37,4 @@ docs:
 coverage:
   stage: quality-assurance
   script:
-    - tox -e py27-django110-coverage-head
+    - tox -e py27-django111-coverage-head
