--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ commands=
 deps =
     flake8 > 3.0
 commands =
-    python -m flake8 {posargs}
+    python -m flake8 {posargs:hyperkitty}
 
 
 [flake8]
