--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,21 @@ py36-django-2.0:
    script:
    - tox -e py36-django20
 
+py35-django-2.1:
+  stage: test
+  script:
+    - tox -e py35-django21
+
+py36-django-2.1:
+  stage: test
+  script:
+    - tox -e py36-django21
+
+py37-django-2.1:
+  stage: test
+  script:
+    - tox -e py37-django21
+
 py35-django-1.11:
   stage: test
   script:
