Sort imports using isort.
I am moving Hyperkitty to use isort, which automatically sorts imports for
us. We have codified all the imports in the following order:

- __future__ imports
- Standard Library imports
- Django imports
- Thirdparty imports
- Project level and local folder imports

There is one blank line between each of the sections mentioned above.

See [isort] section in tox.ini file for config for isort.

`lint` gitlab ci job also checks for sorts.

--- a/tox.ini
+++ b/tox.ini
@@ -38,8 +38,22 @@ deps =
     flake8 > 3.0
 commands =
     python -m flake8 {posargs:hyperkitty}
+	python setup.py isort
 
 
 [flake8]
 show-source = True
 exclude = .git,.tox,dist,*egg,doc
+
+
+[isort]
+line_length=79
+multi_line_output=4
+balanced_wrapping=True
+known_django=django
+sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+no_lines_before=LOCALFOLDER
+lines_after_imports=2
+use_paranthesis=True
+default_section=THIRDPARTY
+known_first_party=hyperkitty
