Add support for Django 2.2

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<2.3
 commands =
     coverage run example_project/manage.py test --settings=hyperkitty.tests.settings_test {posargs:hyperkitty}
     coverage: coverage html
