--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,10 +24,20 @@ py36-django-2.1:
   script:
     - tox -e py36-django21
 
+py36-django-2.2:
+  stage: test
+  script:
+    - tox -e py36-django22
+
 py37-django-2.1:
   stage: test
   script:
     - tox -e py37-django21
+
+py37-django-2.2:
+  stage: test
+  script:
+    - tox -e py37-django22
 
 py35-django-1.11:
   stage: test
