--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,11 @@ py37-django-3.0:
     - tox -e py37-django30
 
 
+py38-django-2.2:
+  stage: test
+  script:
+    - tox -e py38-django22
+
 lint:
   stage: quality-assurance
   script:
