--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,17 @@ py35-django-1.11:
   script:
   - tox -e py35-django111
 
+py36-django-3.0:
+  stage: test
+  script:
+    - tox -e py36-django30
+
+py37-django-3.0:
+  stage: test
+  script:
+    - tox -e py37-django30
+
+
 lint:
   stage: quality-assurance
   script:
