--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ deps =
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
+    django30: Django>=3.0,<3.1
 commands =
     coverage run example_project/manage.py test --settings=hyperkitty.tests.settings_test {posargs:hyperkitty}
     coverage: coverage html
