Consider elasticsearch when catching search exceptions
This leads to more meaningful error response to the user
instead of a 500 error when searching using Elasticsearch
backend for Django-Haystack.

This fixes https://gitlab.com/mailman/hyperkitty/issues/263

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ deps =
     mock
     beautifulsoup4
     coverage
+    elasticsearch
     head: git+https://gitlab.com/mailman/mailmanclient.git
     head: git+https://gitlab.com/mailman/django-mailman3.git
     dev: -e../mailmanclient
