--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
     django30: Django>=3.0,<3.1
+    django30,coverage: django-haystack>=3.0b2
 commands =
     coverage run example_project/manage.py test --settings=hyperkitty.tests.settings_test {posargs:hyperkitty}
     coverage: coverage html
