Include django-debug-toolbar in dev dependencies for testing.

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ deps =
     beautifulsoup4
     coverage
     elasticsearch
+    django-debug-toolbar
     head: git+https://gitlab.com/mailman/mailmanclient.git
     head: git+https://gitlab.com/mailman/django-mailman3.git
     dev: -e../mailmanclient
