Sync owners and moderators from Mailman Core for MailingList model.
These are added as ManyToMany relationship to User model since a User can own
multiple owners and a MailingList can have multiple owners.

Fixes #302

--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,8 @@ deps =
     coverage
     elasticsearch
     django-debug-toolbar
+    git+https://gitlab.com/mailman/django-mailman3.git
     head: git+https://gitlab.com/mailman/mailmanclient.git
-    head: git+https://gitlab.com/mailman/django-mailman3.git
     dev: -e../mailmanclient
     dev: -e../django-mailman3
     django20: Django>=2.0,<2.1
