Extend lock life for update_and_clean_index job and add some doc.

--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,6 @@ known_django=django
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 no_lines_before=LOCALFOLDER
 lines_after_imports=2
-use_paranthesis=True
+use_parentheses=True
 default_section=THIRDPARTY
 known_first_party=hyperkitty
