--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,11 +39,15 @@ py37-django-3.0:
   script:
     - tox -e py37-django30
 
-
 py38-django-2.2:
   stage: test
   script:
     - tox -e py38-django22
+
+py39-django-2.2:
+  stage: test
+  script:
+    - tox -e py39-django22
 
 lint:
   stage: quality-assurance
